First work grid using c sharp. To github The 2nd attempt.

--- a/WebApplicationVOne/Web.config
+++ b/WebApplicationVOne/Web.config
@@ -7,6 +7,8 @@
   <connectionStrings>
     <add name="OakwoodConnectionString" connectionString="Data Source=.;Initial Catalog=Oakwood;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+	<add name="cs" connectionString="Data Source=.;Initial Catalog=Oakwood;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
