--- a/WebApplicationVOne/Web.config
+++ b/WebApplicationVOne/Web.config
@@ -1,14 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <connectionStrings>
-    <add name="OakwoodConnectionString" connectionString="Data Source=.;Initial Catalog=Oakwood;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-	<add name="cs" connectionString="Data Source=.;Initial Catalog=Oakwood;Integrated Security=True"
-        providerName="System.Data.SqlClient" />
+    <add name="OakwoodConnectionString" connectionString="Data Source=.;Initial Catalog=Oakwood;Integrated Security=True" providerName="System.Data.SqlClient" />
+	<add name="cs" connectionString="Data Source=.;Initial Catalog=Oakwood;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
