--- a/WebApplicationVOne/WebApplicationVOne.csproj
+++ b/WebApplicationVOne/WebApplicationVOne.csproj
@@ -44,6 +44,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.15.0.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.15.0\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
@@ -98,6 +101,7 @@
     <Reference Include="Microsoft.AspNet.FriendlyUrls">
       <HintPath>..\packages\Microsoft.AspNet.FriendlyUrls.Core.1.0.2\lib\net45\Microsoft.AspNet.FriendlyUrls.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
@@ -137,6 +141,9 @@
     <Content Include="WebFormDocEditor.aspx" />
     <Content Include="WebFormProduct.aspx" />
     <Content Include="WebFormVisitor.aspx" />
+    <Content Include="WFGallery.aspx" />
+    <Content Include="WFWordDoc.aspx" />
+    <Content Include="WFWordDoc2.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -249,6 +256,27 @@
     </Compile>
     <Compile Include="WebFormVisitor.aspx.designer.cs">
       <DependentUpon>WebFormVisitor.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WFGallery.aspx.cs">
+      <DependentUpon>WFGallery.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WFGallery.aspx.designer.cs">
+      <DependentUpon>WFGallery.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WFWordDoc.aspx.cs">
+      <DependentUpon>WFWordDoc.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WFWordDoc.aspx.designer.cs">
+      <DependentUpon>WFWordDoc.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WFWordDoc2.aspx.cs">
+      <DependentUpon>WFWordDoc2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WFWordDoc2.aspx.designer.cs">
+      <DependentUpon>WFWordDoc2.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
