Added stored procedure use.

--- a/WebApplicationVOne/Web.config
+++ b/WebApplicationVOne/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="OakwoodConnectionString" connectionString="Data Source=.;Initial Catalog=Oakwood;Integrated Security=True" providerName="System.Data.SqlClient" />
-	<add name="cs" connectionString="Data Source=.;Initial Catalog=Oakwood;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AirlineConnectionString" connectionString="Data Source=.;Initial Catalog=Airline;Integrated Security=True" providerName="System.Data.SqlClient" />
+	<add name="cs" connectionString="Data Source=.;Initial Catalog=Airline;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
